--- a/ecclesia/oracion/04 Statio.html
+++ b/ecclesia/oracion/04 Statio.html
@@ -590,7 +590,7 @@
 
       <li>
         <details class="select">
-          <summary>Oratio</summary>
+          <summary>Initium</summary>
           <ol>
             <h2>STATIO 4</h2>
             <h3>LA GRACIA: Omnia est Gratia</h3>
@@ -609,10 +609,11 @@
               <li>Relacionar las acciones con las actitudes y el Bien</li>
               <li></li>
             </ol>
-            
+
             <h4>Methodus</h4>
             <ol>
-              <li><b>Definir:</b> Es una guía estructurada que indica qué hacer, en qué orden y con qué criterios, para obtener un objetivo</li>
+              <li><b>Definir:</b> Es una guía estructurada que indica qué hacer, en qué orden y con qué criterios, para
+                obtener un objetivo</li>
               <li>Propósito definido: El Fin</li>
               <li>Principios y reglas: Los Fundamentos, Condiciones y Referencias</li>
               <li>Control: Medible en tiempo, cantidad, resultados.</li>
@@ -626,17 +627,18 @@
             </ol>
             <h3 class="lema">Virtus</h3>
             <h4>Precatio Quotidiana</h4>
-         
-              <ol>
-                <li>Oración Vocal </li>
-                <li>Oración con textos bíblicos</li>
-                <li>Mental de súplica [Por las Necesidades de la Iglesia, la Comunidad y Propias]</li>
-              </ol>
-              <!-- ++++++++++++++++++++++++ -->
+
+            <ol>
+              <li>Oración Vocal </li>
+              <li>Oración con textos bíblicos</li>
+              <li>Mental de súplica [Por las Necesidades de la Iglesia, la Comunidad y Propias]</li>
+            </ol>
+            <!-- ++++++++++++++++++++++++ -->
             <h4>Bene Eligiere</h4>
             <ol>
               <li>Comprender el bien, elegirlo y practicarlo</li>
-              <li>La tentación, me indica en que debo crecer, y se supera con el crecimiento en la fe, esperanza y amor.</li>
+              <li>La tentación, me indica en que debo crecer, y se supera con el crecimiento en la fe, esperanza y amor.
+              </li>
               <li>Todo lo que no me lleve al Señor es tentación</li>
               <li>Reconocer el bien en sus efectos y por sus causas</li>
               <li></li>
@@ -644,81 +646,216 @@
             <!-- ++++++++++++++++++++++++ -->
             <h4>La Atención</h4>
             <ol>
-              <li>Proceso cognitivo que permite seleccionar, focalizar y mantener el procesamiento de información relevante en un momento dado</li>
+              <li>Proceso cognitivo que permite seleccionar, focalizar y mantener el procesamiento de información
+                relevante en un momento dado</li>
             </ol>
-<!-- ++++++++++++++++++++++++ -->
+            <!-- ++++++++++++++++++++++++ -->
 
-<h4>La Perseverancia</h4>
-<ol>
-  <li>Se mantiene si la acción es coherente con el Fin, en un objetivo necesario y la motivación por la que se inicia permanece</li>
- <h4>Paciencia</h4>
-<ol>
-  <li>Gracia donde Dios nos indica el camino, lo que debemos cambiar, tanto en nosotros como en la realidad.</li>
-  <li>Cambiar la impaciencia por el conocimiento y la confianza en el Señor, esto es camino a la humildad</li>
-  <li>La perseverancia es guiada por la atenta Escucha del Señor, que Se da en la oración, la Vida y la Iglesia</li>
-</ol>
-</ol>
-<!-- ++++++++++++++++++++++++ -->
- <h4>La Humildad</h4>
- <ol>
-   <li>Es Tener la mirada sólo puesta en el Señor</li>
-   <li>La humildad consiste en ir conociendo la verdad sobre mi mismo; y nos conocemos cuando conocemos a Cristo. </li>
-   <li>Hacer aquellas penitencias[ejercicios, preparaciones] que me ayuden a evitar el pecado y a crecer en el Amor</li>
-   <li>La humildad se vive con sencillez y alegría</li>
-   <li> La humildad y la pobreza son las dos caras de la verdad. Es una disposición de corazón que orienta toda la vida hacia Dios. “Altos muros son la pobreza” Clara de Asís</li>
-   <li>Teresa de Jesús: “Los pobres verdaderos no hacen ruido”. “Cuando menos hay más confiada estoy”</li>
-  </ol><br> <hr><br>
-  <!-- +++++++++++++++++++++++++++++++++++++ -->
-   <h2>Via Vitae</h2>
- 1. EL FIN	<br>
-Señor Me invitas a que seamos Uno en ti.  Ut Omnes Unum Simus in Domino	<br><br>
-2. LA GRACIA	<br>
-Me amaste desde siempre y para siempre.	<br>
-Y aunque te das todo, mí pecado me dificulta recibirte y unirme a ti.	<br><br>
-3. EL BIEN	<br>
-Enséñame a reconocerte en el bien que me ofreces en todo momento y lugar.	<br>
-A través del bien me comunicas tu Gracia.	<br>
-El bien donde te revelas, lo identifique, elija y lo realice. Cambiándome y cambiando.	<br>
-Es bueno lo que hace mejor a alguien, lo que lo acerca al Señor	<br>
-Se trata de hacer el bien y de hacerme mejor, conversión	<br>
-Algo es mejor que otro en relación a su finalidad	<br>
-Que evalúe todo buscándote en el bien posible	<br>
-Que sea consciente que todo lo que no me lleve a ti es tentación.	<br><br>
-4. LA ORACIÓN	<br>
-Me mantienes unido a ti mediante la oración, que exprese con ella mí unidad contigo a través de la fe que le diste a tu iglesia, la esperanza de la realización de tu reino, construido con la caridad.	<br>
-Que mí Oración sea vocal, mental, de súplica, intercesión, alabanza, Lectio Divina, y la más importante de todas: la Misa.	<br><br>
-5. LA PERSEVERANCIA	<br>
-Que mí perseverancia sea coherente con el fin, y que, guiada con la	<br>
- PACIENCIA, donde la escucha de la Palabra en la Iglesia, y en la oración me preparen para mí conversión y mí caminar, y que el 	<br>
-CONOCIMIENTO DE LA VERDAD sea sustento de mí perseverancia.	<br><br>
-6. FACTUS	<br>
-Que la acción dirigida por la perseverancia, desarrolle un	<br>
-MÉTODO, como una secuencia lógica de pasos	<br>
-El FIN es su punto de partida	<br>
-FUNDAMENTOS verdaderos	<br>
-Atento a las CONDICIONES de tiempo y lugar	<br>
-Ruta con CRITERIOS evaluables en tiempo u objetivos  	<br>
-ORDEN simple y coherente 	<br><br>
-7. HUMILDAD	<br>
-Es tener la mirada puesta en ti.	<br>
-Que a través de conocerte me conozca	<br>
-Que busque crecer en mí penitencia	<br>
-Que sea feliz en una cada vez mayor pobreza	<br>
-Que toda mi confianza esté puesta solo en la Providencia	<br><br>
-8. HABITUS 	<br>
-La actitud muestra mí corazón, me dirige en el cambio.	<br>
-Este atento a las inclinaciones de mi corazón, las evalué y las oriente hacia ti.	<br>
-La actitud Es el resultado de mí conversión 	<br>
-Es a donde se dirige la Gracia 	<br>
-Que ame como soy amado, y pueda compartirlo.	<br>
-	<br>
-Por Cristo Nuestro Señor. Amén.	<br>
-<br><br>
+            <h4>La Perseverancia</h4>
+            <ol>
+              <li>Se mantiene si la acción es coherente con el Fin, en un objetivo necesario y la motivación por la que
+                se inicia permanece</li>
+              <h4>Paciencia</h4>
+              <ol>
+                <li>Gracia donde Dios nos indica el camino, lo que debemos cambiar, tanto en nosotros como en la
+                  realidad.</li>
+                <li>Cambiar la impaciencia por el conocimiento y la confianza en el Señor, esto es camino a la humildad
+                </li>
+                <li>La perseverancia es guiada por la atenta Escucha del Señor, que Se da en la oración, la Vida y la
+                  Iglesia</li>
+              </ol>
+            </ol>
+            <!-- ++++++++++++++++++++++++ -->
+            <h4>La Humildad</h4>
+            <ol>
+              <li>Es Tener la mirada sólo puesta en el Señor</li>
+              <li>La humildad consiste en ir conociendo la verdad sobre mi mismo; y nos conocemos cuando conocemos a
+                Cristo. </li>
+              <li>Hacer aquellas penitencias[ejercicios, preparaciones] que me ayuden a evitar el pecado y a crecer en
+                el Amor</li>
+              <li>La humildad se vive con sencillez y alegría</li>
+              <li> La humildad y la pobreza son las dos caras de la verdad. Es una disposición de corazón que orienta
+                toda la vida hacia Dios. “Altos muros son la pobreza” Clara de Asís</li>
+              <li>Teresa de Jesús: “Los pobres verdaderos no hacen ruido”. “Cuando menos hay más confiada estoy”</li>
+            </ol><br>
+            <hr><br>
+            <!-- +++++++++++++++++++++++++++++++++++++ -->
+            <h2>Via Vitae</h2>
+            1. EL FIN <br>
+            Señor Me invitas a que seamos Uno en ti. Ut Omnes Unum Simus in Domino <br><br>
+            2. LA GRACIA <br>
+            Me amaste desde siempre y para siempre. <br>
+            Y aunque te das todo, mí pecado me dificulta recibirte y unirme a ti. <br><br>
+            3. EL BIEN <br>
+            Enséñame a reconocerte en el bien que me ofreces en todo momento y lugar. <br>
+            A través del bien me comunicas tu Gracia. <br>
+            El bien donde te revelas, lo identifique, elija y lo realice. Cambiándome y cambiando. <br>
+            Es bueno lo que hace mejor a alguien, lo que lo acerca al Señor <br>
+            Se trata de hacer el bien y de hacerme mejor, conversión <br>
+            Algo es mejor que otro en relación a su finalidad <br>
+            Que evalúe todo buscándote en el bien posible <br>
+            Que sea consciente que todo lo que no me lleve a ti es tentación. <br><br>
+            4. LA ORACIÓN <br>
+            Me mantienes unido a ti mediante la oración, que exprese con ella mí unidad contigo a través de la fe que le
+            diste a tu iglesia, la esperanza de la realización de tu reino, construido con la caridad. <br>
+            Que mí Oración sea vocal, mental, de súplica, intercesión, alabanza, Lectio Divina, y la más importante de
+            todas: la Misa. <br><br>
+            5. LA PERSEVERANCIA <br>
+            Que mí perseverancia sea coherente con el fin, y que, guiada con la <br>
+            PACIENCIA, donde la escucha de la Palabra en la Iglesia, y en la oración me preparen para mí conversión y mí
+            caminar, y que el <br>
+            CONOCIMIENTO DE LA VERDAD sea sustento de mí perseverancia. <br><br>
+            6. FACTUS <br>
+            Que la acción dirigida por la perseverancia, desarrolle un <br>
+            MÉTODO, como una secuencia lógica de pasos <br>
+            El FIN es su punto de partida <br>
+            FUNDAMENTOS verdaderos <br>
+            Atento a las CONDICIONES de tiempo y lugar <br>
+            Ruta con CRITERIOS evaluables en tiempo u objetivos <br>
+            ORDEN simple y coherente <br><br>
+            7. HUMILDAD <br>
+            Es tener la mirada puesta en ti. <br>
+            Que a través de conocerte me conozca <br>
+            Que busque crecer en mí penitencia <br>
+            Que sea feliz en una cada vez mayor pobreza <br>
+            Que toda mi confianza esté puesta solo en la Providencia <br><br>
+            8. HABITUS <br>
+            La actitud muestra mí corazón, me dirige en el cambio. <br>
+            Este atento a las inclinaciones de mi corazón, las evalué y las oriente hacia ti. <br>
+            La actitud Es el resultado de mí conversión <br>
+            Es a donde se dirige la Gracia <br>
+            Que ame como soy amado, y pueda compartirlo. <br>
+            <br>
+            Por Cristo Nuestro Señor. Amén. <br>
+            <br><br>
 
           </OL>
 
         </details>
-      </li> 
+      </li>
+      <!-- ++++++++++++++++++++++++++++++ -->
+      <li>
+        <details class="select">
+          <summary>Oratio</summary>
+        <ol>
+            <h2 class="cita"> LA GRACIA </h2>
+            <h4> OMNIA SUNT GRATIA, ET GRATIA EST IN OMNIBUS. <br>
+              Todo es Gracia y la Gracia está en todo </h4>
+                <ol>
+
+                  <li> Solo desde la Fe conozco rectamente la Verdad, creo y acepto el Fin, tu Voluntad, y me dejo transformar
+                    en Cristo, con el Bien. </li>
+                    <li> Y sé que Tú Gracia precede a la realidad y a la acción. Y es mí motivo de Esperanza. </li>
+                    <li> Me amaste desde siempre y para siempre. Me amas y estás en mí, guiándome en todo momento y
+                      circunstancia. Y a todos también. </li>
+                    </ol>
+            <!-- +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
+            <h2> EL FIN </h2>
+            <h4> UT OMNES UNUM SIMUS IN DOMINO. <br> Que todos seamos uno en el Señor</h4>
+              <ol>
+            <li>Dios se manifiesta a todo el que lo busca con sinceridad </li>
+            <li> Señor Me invitas a que seamos Uno en ti. </li>
+            <li> Me muestras en tú encarnación el Fin: Quién y Cómo he de ser. </li>
+            <li> Y aunque te das todo, mi pecado me dificulta unirme a ti. </li>
+            <li> Que tenga presente que cada etapa tiene su propio objetivo, no cambia el Fin, lo profundiza. </li>
+            </ol>
+            <!-- +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
+            <h2> LA VERDAD </h2>
+            <ol>
+
+              <li> La conocemos a través de la razón y la fe en la revelación. </li>
+              <li> La libertad se realiza en la fe, alcanza en Dios la certeza de la verdad </li>
+              <li> El hombre es atraído por lo bello, bueno y verdadero </li>
+              <li> La verdad se inicia con una interrogante </li>
+            </ol>
+            <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
+            <h2> EL BIEN </h2>
+            <ol>
+
+              <li> DEFINITIO [DEFINICIÓN] </li>
+              <li> Es bueno lo que tiende a la felicidad, lo que me acerca a ti Señor </li>
+              <li> El bien, que es donde te revelas, lo identifique, elija y lo realice. </li>
+              <li> El bien se inicia con la Verdad </li>
+              <li> El deseo del bien es lo que guía todas las acciones humanas </li>
+              <li> Dios eligió la cruz, la pobreza, lo débil, para redimirlo. </li>
+              <li> SCOPUM [OBJETIVO] </li>
+              <li> Que al elegir tenga presente el Fin, que eres tú Señor </li>
+              <li> Que en todo te busque mí Dios, que habitas en el bien posible. </li>
+              <li> El signo de la aceptación al Señor es la conversión permanente </li>
+              <li> Dios es el origen, Y fuente de todo bien. Buscar el bien es buscar a Dios, reconocer el bien es
+                encontrar a Dios. </li>
+                <li> Haré el bien en la medida que sea santo. </li>
+                <li> Actúo como soy, soy como pienso y pienso como vivo. </li>
+                <li> Que te muestre Señor, primero con el ejemplo y luego con la palabra. </li>
+                <li> La libertad es la condición necesaria para poder elegir </li>
+                <li> Y El conocimiento en permanente desarrollo, es la forma para elegir cada vez mejor </li>
+                <li> El conocimiento nos lleva a el bien y la ignorancia al mal. </li>
+                <li> Que el bien que me ofreces me mueva a hacer, transforme y me transforme a tu semejanza. </li>
+                <li> Que sea consciente que todo lo que no me lleve a ti es tentación. </li>
+                <li> Que entienda que siempre el primer paso es que yo cambie, luego cambie la realidad y finalmente ayude,
+                  teniendo presente el propio desarrollo, a que otra persona se vuelva a ti, Señor. </li>
+                  <li> El bien lo conocemos en sus resultados permanentes </li>
+                  <li> Que vea en los demás mí posible bien o pecado, como iniciar el cambio de la realidad y como ayudar a
+                    perseverar en el Señor. </li>
+                  </ol>
+            <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
+            <h2> LA ORACIÓN </h2>
+            <ol>
+            <li> Señor, Que elija un lugar y momento diario de encuentro. Durante el día y en la noche. (oratio, lectio,
+              examen conscientiae) </li>
+              <li> Que Inicie la oración con la forma vocal, luego mental, de súplica, intercesión, alabanza, Lectio, y la
+                más grande de todas: la Misa. </li>
+                <li> Me uno a ti mediante la oración, que exprese con ella mí unidad contigo a través de la fe que le diste
+                  a tu iglesia, la esperanza de la realización de tu reino, construido con la caridad. </li>
+          </ol>      
+
+            <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
+            <h2> LA PERSEVERANCIA </h2>
+            <ol>
+
+              <li> Que mí perseverancia sea coherente con el fin, y que, guiada con la </li>
+              <li> PACIENCIA, donde la escucha de la Palabra en la Iglesia, y en la oración me ayuden en mí conversión y
+                mí caminar, y que el </li>
+                <li> CONOCIMIENTO DE LA VERDAD sea sustento de mí perseverancia. </li>
+              </ol>
+            <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
+            <h2> HUMILDAD </h2>
+            <ol>
+
+              <li> Es tener la mirada puesta en ti. </li>
+              <li> Que a través de conocerte me conozca </li>
+              <li> Que busque crecer en mí penitencia </li>
+              <li> Que sea feliz en una cada vez mayor pobreza </li>
+              <li> Que toda mi confianza esté puesta solo en la Providencia </li>
+            </ol>
+            <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
+            <h2> FACTUS </h2>
+            <ol>
+
+              <li> Que la acción dirigida por la perseverancia, desarrolle un </li>
+              <li> MÉTODO, como una secuencia lógica de pasos </li>
+              <li> El FIN es su punto de partida </li>
+              <li> FUNDAMENTOS verdaderos </li>
+              <li> Atento a las CONDICIONES de tiempo y lugar </li>
+              <li> Ruta con CRITERIOS evaluables en tiempo u objetivos </li>
+              <li> ORDEN simple y coherente </li>
+            </ol>
+            <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
+            <h2> HABITUS </h2>
+            <ol>
+
+              <li> La actitud muestra mí corazón, me dirige en el cambio. </li>
+              <li> Esté atento a las inclinaciones de mí corazón, las evalúe y las oriente hacia ti </li>
+              <li> La actitud Es el resultado de mí conversión </li>
+              <li> Es a donde se dirige la Gracia </li>
+              <li> Que ame como soy amado, y pueda compartirlo. </li>
+              <li> Por Cristo Nuestro Señor. Amén. </li>
+            </ol>
+
+          </ol>
+          <p><br /><br /></p>
+        </details>
+      </li>
       <!-- ++++++++++++++++++++++++++++++ -->
       <li>
         <details class="select">
