--- a/ecclesia/oracion/CastilloInterior.html
+++ b/ecclesia/oracion/CastilloInterior.html
@@ -1345,7 +1345,7 @@
         <!-- +++++++++++++++++++++++++++++++++++++++++++++++++ -->
         <ol>
           <h2><i>GRATIA INCREMENTI</i></h2>
-          <h3>Prooemium</h3>
+          <h3>Proemium</h3>
           <p><b> Valor o Virtud: Principio moral <br> Es el ideal o bien que se reconoce como digno.</b> <br>
             - Es una creencia profunda sobre lo que es correcto, importante o deseable. <br>
             - Los valores guían nuestras decisiones y nos dan propósito.</p>
