--- a/ecclesia/lectio/mateo/mateo10.html
+++ b/ecclesia/lectio/mateo/mateo10.html
@@ -829,30 +829,253 @@ Los que viven según Cristo sufrirán persecución; llamado a la fidelidad.<br><
       <li>
         <details class="select">
           <summary>Variaciones en el Texto</summary>
+          <strong>Mateo 10,26</strong><br>
+No hay variación conceptual relevante entre Jerusalén, Vulgata, NVI y otras traducciones reconocidas.<br>
+La idea central (“nada hay oculto que no llegue a manifestarse”) es estable.<br><br>
+
+<strong>Mateo 10,27</strong><br>
+Variación leve pero con matiz pastoral:<br>
+Algunas traducciones dicen “lo que oigan al oído, proclámenlo desde las azoteas”; otras “lo que se les susurra”.<br>
+Concepto: no cambia el sentido doctrinal, pero “susurra” enfatiza más la intimidad de la revelación.<br><br>
+
+<strong>Mateo 10,28</strong><br>
+Variación conceptual relevante:<br>
+Unas traducciones dicen “infierno”, otras “gehenna”.<br>
+Concepto afectado: “gehenna” remite al trasfondo judío de juicio definitivo; “infierno” es una interpretación teológica posterior.<br>
+No cambia la doctrina, pero sí el horizonte simbólico.<br><br>
+
+<strong>Mateo 10,29</strong><br>
+Variación leve sin impacto doctrinal:<br>
+“Sin que lo permita el Padre” / “sin el consentimiento del Padre”.<br>
+Concepto: la providencia divina permanece idéntica.<br><br>
+
+<strong>Mateo 10,30</strong><br>
+No hay variación conceptual relevante.<br>
+La afirmación sobre el conocimiento total de Dios se mantiene igual.<br><br>
+
+<strong>Mateo 10,31</strong><br>
+No hay variación conceptual relevante.<br>
+Todas las traducciones expresan la superioridad del valor humano ante Dios.<br><br>
+
+<strong>Mateo 10,32</strong><br>
+Variación leve de formulación:<br>
+“Reconocer delante de los hombres” / “declararse por mí ante los hombres”.<br>
+Concepto: confesión pública de la fe; no hay cambio doctrinal.<br><br>
+
+<strong>Mateo 10,33</strong><br>
+Variación conceptual moderada:<br>
+Algunas versiones usan “negar”, otras “desconocer” o “renegar”.<br>
+Concepto afectado: “negar” subraya el acto consciente; “desconocer” puede suavizar el sentido personal del rechazo.<br>
+El mensaje teológico (responsabilidad de la confesión de fe) se mantiene.<br>
+
         </details>
       </li>
       <!-- ****************************** -->
       <li>
         <details class="select">
           <summary>Paralelos</summary>
+          <strong>Textos paralelos de Mateo 10,26–33</strong><br><br>
+
+<strong>1. Lucas 12,2-9</strong><br>
+Texto paralelo más directo.<br>
+Nada hay oculto que no llegue a manifestarse.<br>
+Llamado a no temer a los hombres sino a Dios.<br>
+Valor de cada persona ante Dios y cuidado providente.<br>
+Confesión o negación del Hijo del Hombre ante los ángeles de Dios.<br><br>
+
+<strong>2. Marcos 8,34-38</strong><br>
+Relación entre seguimiento, confesión pública y fidelidad a Cristo.<br>
+Advertencia contra la vergüenza del Evangelio.<br><br>
+
+<strong>3. Romanos 10,9-10</strong><br>
+Confesión pública de la fe como camino de salvación.<br>
+Relación entre fe interior y proclamación externa.<br><br>
+
+<strong>4. 2 Timoteo 2,11-13</strong><br>
+Fidelidad y negación de Cristo con consecuencias escatológicas.<br>
+Si lo negamos, Él también nos negará.<br><br>
+
+<strong>5. Apocalipsis 3,5</strong><br>
+Confesión del nombre del creyente ante el Padre y los ángeles.<br>
+Dimensión escatológica de la fidelidad.<br><br>
+
+<strong>6. Salmo 56,4-12</strong><br>
+Confianza en Dios frente al temor humano.<br>
+Dios conoce cada paso del justo.<br><br>
+
+<strong>7. Isaías 43,1-5</strong><br>
+“No temas, porque yo te he redimido”.<br>
+Valor único del ser humano ante Dios.<br><br>
+
+<strong>Temas teológicos paralelos</strong><br>
+– Revelación y manifestación final de la verdad (Qo 12,14).<br>
+– Temor de Dios frente al temor de los hombres (Prov 29,25).<br>
+– Providencia divina y dignidad humana (Sab 11,24-26).<br>
+– Confesión pública de la fe y juicio final (Mt 25,31-46).<br><br>
+
         </details>
       </li>
       <!-- ****************************** -->
       <li>
         <details class="select">
           <summary>Temas</summary>
+          <ol>
+
+  <li>
+    La revelación definitiva de la verdad<br>
+    Nada de lo oculto permanecerá escondido; Dios es el Señor de la verdad y la manifestará plenamente.<br>
+    El anuncio del Evangelio participa de esta lógica de revelación y luz.<br>
+  </li>
+
+  <li>
+    El temor de Dios frente al temor humano<br>
+    Jesús contrapone el miedo a los hombres con el temor reverente a Dios.<br>
+    El verdadero temor no paraliza, sino que ordena la vida hacia lo eterno.<br>
+  </li>
+
+  <li>
+    La soberanía de Dios sobre la vida y la muerte<br>
+    Solo Dios tiene autoridad última sobre el destino total del ser humano.<br>
+    Esta afirmación fundamenta la valentía del testimonio cristiano.<br>
+  </li>
+
+  <li>
+    La providencia divina y el valor de cada persona<br>
+    Dios conoce y cuida incluso lo más pequeño.<br>
+    El discípulo vale infinitamente más que las criaturas visibles.<br>
+  </li>
+
+  <li>
+    La confesión pública de la fe<br>
+    La fe no es solo interior: exige testimonio visible y coherente.<br>
+    Confesar a Cristo ante los hombres tiene consecuencias escatológicas.<br>
+  </li>
+
+  <li>
+    La reciprocidad escatológica<br>
+    Quien reconoce a Cristo será reconocido por Él ante el Padre.<br>
+    Quien lo niega se excluye de esta comunión final.<br>
+  </li>
+
+  <li>
+    La valentía como rasgo del discípulo<br>
+    El discípulo es llamado a hablar con claridad y sin miedo.<br>
+    La misión exige confianza absoluta en Dios.<br>
+  </li>
+
+</ol>
+
         </details>
       </li>
       <!-- ****************************** -->
       <li>
         <details class="select">
           <summary>Patrística</summary>
+          <ol>
+
+  <li>
+    San Juan Crisóstomo<br>
+    “El Señor disipa el miedo mostrando que la verdad, aunque ahora sea combatida, al final resplandecerá para todos.”<br>
+    (Homiliae in Matthaeum, 35,1)<br>
+  </li>
+
+  <li>
+    San Jerónimo<br>
+    “No temer a los que matan el cuerpo es propio de quienes saben que la vida verdadera no puede ser arrebatada por la muerte.”<br>
+    (Commentarii in Matthaeum, 10,28)<br>
+  </li>
+
+  <li>
+    San Agustín<br>
+    “El temor de Dios expulsa el temor de los hombres, porque quien se apoya en Dios no puede ser vencido por amenazas temporales.”<br>
+    (Sermo 64, De timore Dei)<br>
+  </li>
+
+  <li>
+    Orígenes<br>
+    “La gehenna no destruye el cuerpo solamente, sino que muestra el juicio de Dios sobre toda la existencia del hombre.”<br>
+    (Commentarium in Matthaeum, ad 10,28)<br>
+  </li>
+
+  <li>
+    San Hilario de Poitiers<br>
+    “Confesar a Cristo delante de los hombres es participar ya ahora del juicio futuro, en el que Cristo se manifestará como juez y defensor.”<br>
+    (In Matthaeum, 10,32-33)<br>
+  </li>
+
+  <li>
+    San Beda el Venerable<br>
+    “Dios cuenta hasta los cabellos de la cabeza para que el creyente comprenda que nada de su vida está fuera del cuidado divino.”<br>
+    (In Evangelium Matthaei, lib. II, ad 10,30)<br>
+  </li>
+
+  <li>
+    San Cirilo de Alejandría<br>
+    “El que confiesa a Cristo con valentía se reviste de gloria, porque es reconocido por Aquel que es Señor del cielo y de la tierra.”<br>
+    (Fragmenta in Matthaeum, ad 10,32)<br>
+  </li>
+
+</ol>
+
         </details>
       </li>
       <!-- ****************************** -->
       <li>
         <details class="select">
           <summary>Magisterio</summary>
+          <ol>
+
+  <li>
+    La confesión pública de la fe<br>
+    La Iglesia enseña que la fe debe ser confesada exteriormente y no solo vivida de modo interior.<br>
+    “El discípulo de Cristo no debe avergonzarse de dar testimonio del Señor.”<br>
+    (Catecismo de la Iglesia Católica, 2471)<br>
+  </li>
+
+  <li>
+    El martirio y el testimonio valiente<br>
+    Confesar a Cristo ante los hombres puede llegar hasta el testimonio supremo del martirio.<br>
+    “El martirio es el supremo testimonio de la verdad de la fe.”<br>
+    (Catecismo de la Iglesia Católica, 2473)<br>
+  </li>
+
+  <li>
+    El temor de Dios como principio de sabiduría<br>
+    El Magisterio distingue entre el temor servil y el temor filial que conduce a la fidelidad.<br>
+    “El temor del Señor es el comienzo de la sabiduría y dispone a acoger su misericordia.”<br>
+    (Catecismo de la Iglesia Católica, 1831)<br>
+  </li>
+
+  <li>
+    La providencia divina y la dignidad humana<br>
+    Dios cuida amorosamente de cada persona y nada escapa a su providencia.<br>
+    “La divina providencia dispone suavemente todas las cosas y conduce a su fin a las criaturas.”<br>
+    (Catecismo de la Iglesia Católica, 302)<br>
+  </li>
+
+  <li>
+    La responsabilidad moral ante el juicio final<br>
+    El reconocimiento o negación de Cristo tiene consecuencias escatológicas reales.<br>
+    “Cada hombre recibe en su alma inmortal su retribución eterna en el momento de su muerte.”<br>
+    (Catecismo de la Iglesia Católica, 1022)<br>
+  </li>
+
+  <li>
+    La valentía evangelizadora<br>
+    El Magisterio exhorta a anunciar el Evangelio sin miedo, aun en contextos hostiles.<br>
+    “La Iglesia no crece por proselitismo sino por atracción, cuando los cristianos dan testimonio con valentía.”<br>
+    (Benedicto XVI, Homilía, 13-10-2013)<br>
+  </li>
+
+  <li>
+    La verdad proclamada sin temor<br>
+    El Evangelio debe anunciarse con claridad y confianza en Dios.<br>
+    “Nada hay más sólido, más profundo, más seguro que esta verdad que libera.”<br>
+    (San Juan Pablo II, Veritatis Splendor, 34)<br>
+  </li>
+
+</ol>
+
         </details>
       </li>
       <!-- ****************************** -->
