--- a/ecclesia/lectio/mateo/mateo2.html
+++ b/ecclesia/lectio/mateo/mateo2.html
@@ -552,7 +552,7 @@
         <li>La violencia es relativa a los fines, las formas y las circunstancias</li>
         <li></li>
         <h3>Scientia</h3>
-        <li>Cada acto bueno, nos revela al señor nos muestra algo que necesitamos saber y aprender para vivir.</li>
+        <li>Cada acto bueno, nos revela al Señor nos muestra algo que necesitamos saber y aprender para vivir.</li>
         <li>Dios, jamás abandona a una persona, siempre está guiándola e inspirándola al bien.</li>
       
       </ol>
