--- a/ecclesia/lectio/mateo/mateo3.html
+++ b/ecclesia/lectio/mateo/mateo3.html
@@ -344,8 +344,7 @@
             <li>La fe se prueba en los frutos</li>
             <li>La vida como la mejor predicación</li>
             <li>"La conversión no es solo dejar el pecado, sino volverse hacia Dios con todo el corazón.” Agustín</li>
-            <li></li>
-            <li></li>
+          
           </OL>
         </details>
       </li>
@@ -601,8 +600,7 @@
             <br><br>
             3. Cristo inaugura el nuevo bautismo <br>
             CIC 1224: <br>
-            “Nuestro Señor se sometió voluntariamente al bautismo de San Juan, destinado a los pecadores, para
-            manifestar su ‘anonadamiento’ (Flp 2,7).”
+            “Nuestro Señor se sometió voluntariamente al bautismo de San Juan, destinado a los pecadores, para manifestar su ‘anonadamiento’ (Flp 2,7).”
             <br> Jesús inaugura el bautismo cristiano, no con agua solamente, sino con el Espíritu Santo y fuego (cf. Mt
             3,11).
             <br><br>
@@ -614,10 +612,8 @@
             resucitar a la vida nueva por el bautismo.
             <br><br>
             Documentos adicionales <br>
-            <br> San Juan Pablo II, en su encíclica Redemptor Hominis (1979), menciona que en el bautismo de Jesús se
-            manifiesta el amor del Padre por la humanidad y la misión redentora del Hijo.
-            <br> Papa Benedicto XVI, en su libro Jesús de Nazaret, señala que el bautismo de Jesús es un “descenso al
-            abismo de la muerte” que prefigura su pasión y solidaridad con la humanidad caída.
+            <br> San Juan Pablo II, en su encíclica Redemptor Hominis (1979), menciona que en el bautismo de Jesús se manifiesta el amor del Padre por la humanidad y la misión redentora del Hijo.
+            <br> Papa Benedicto XVI, en su libro Jesús de Nazaret, señala que el bautismo de Jesús es un “descenso al abismo de la muerte” que prefigura su pasión y solidaridad con la humanidad caída.
             <br><br>
             En resumen: <br>
             El Magisterio enseña que:
@@ -633,7 +629,15 @@
       <li>
         <details class="select">
           <summary>Metanoia</summary>
-          <p><br><br></p>
+        <ol>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ol>
         </details>
       </li>
       <!-- ****************************** -->
